--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
   command = "npm run deploy:netlify"
   environment = { NODE_VERSION = "18.20.4"}
+  ignore = "git config --unset-all submodule.guides.url || true"
