--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -24,7 +26,7 @@
   },
   "devDependencies": {
     "@stylistic/stylelint-plugin": "^2.1.0",
-    "@types/node": "^18.15.0",
+    "@types/node": "^18.19.122",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^7.32.0",
@@ -36,7 +38,7 @@
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
-    "typescript": "^4.6.2",
+    "typescript": "^5.9.2",
     "walk-sync": "^2.0.2"
   },
   "dependencies": {
