--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -27,6 +29,7 @@
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "danger": "^13.0.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.4",
@@ -40,8 +43,6 @@
     "walk-sync": "^2.0.2"
   },
   "dependencies": {
-    "@markbind/core": "^5.4.0",
-    "danger": "^12.1.0",
     "postcss": "^8.4.35"
   }
 }
