--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -84,6 +84,7 @@
     "@types/katex": "^0.16.0",
     "@types/lodash": "^4.14.181",
     "@types/markdown-it": "^12.2.3",
+    "@types/node": "^18.19.122",
     "@types/nunjucks": "^3.2.1",
     "@types/path-is-inside": "^1.0.0",
     "@types/primer__octicons": "^17.11.0",
