--- a/.github/workflows/check-file-diff.yml
+++ b/.github/workflows/check-file-diff.yml
@@ -15,9 +15,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
       - run: npm run setup
       - name: Run Danger
-        run: npx danger ci
+        run: npx danger ci --dangerfile scripts/dangerfile.ts
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
