--- a/.eslintignore
+++ b/.eslintignore
@@ -26,6 +26,9 @@ packages/core/src/variables/*.js
 packages/core/test/unit/**/*.js
 packages/core/index.js
 
+packages/core/src/lib/progress/*.js
+
+
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
 packages/core/src/lib/markdown-it/plugins/*
