--- a/.gitignore
+++ b/.gitignore
@@ -104,4 +104,5 @@ packages/core/src/variables/*.js
 packages/core/test/unit/**/*.js
 packages/core/index.js
 
+packages/core/src/lib/progress/*.js
 # --- packages/core end ---
