Update lerna to v8
Delay upgrade to v9 as it drops support for Node v18
Run lerna repair to remove deprecated options and update
configuration to latest

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,7 @@ packages/core/index.js
 
 packages/core/src/lib/progress/*.js
 # --- packages/core end ---
+
+# Nx for Lerna
+.nx/cache
+.nx/workspace-data
