--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,5 @@
     "packages/*"
   ],
   "version": "6.1.0",
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useWorkspaces": true
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
