--- a/nx.json
+++ b/nx.json
@@ -1,14 +1,10 @@
 {
-  "tasksRunnerOptions": {
-    "default": {
-      "runner": "nx/tasks-runners/default",
-      "options": {
-        "cacheableOperations": [
-          "test",
-          "updatetest"
-        ]
-      }
+  "targetDefaults": {
+    "test": {
+      "cache": true
+    },
+    "updatetest": {
+      "cache": true
     }
-  },
-  "targetDefaults": {}
+  }
 }
