--- a/tsconfig_base.json
+++ b/tsconfig_base.json
@@ -9,6 +9,7 @@
     "declaration": true,
     "declarationMap": true,
     "forceConsistentCasingInFileNames": true,
-    "newLine": "lf"
+    "newLine": "lf",
+    "skipLibCheck": true
   }
 }
