--- a/package.json
+++ b/package.json
@@ -36,13 +36,11 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lodash": "^7.2.0",
     "lerna": "^8.2.4",
+    "postcss": "^8.5.6",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.3.3",
     "walk-sync": "^2.0.2"
-  },
-  "dependencies": {
-    "postcss": "^8.4.35"
   }
 }
