--- a/package.json
+++ b/package.json
@@ -27,22 +27,20 @@
   "devDependencies": {
     "@stylistic/stylelint-plugin": "^2.1.0",
     "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "danger": "^13.0.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lodash": "^7.2.0",
-    "lerna": "^6.5.1",
+    "lerna": "^8.2.4",
+    "postcss": "^8.5.6",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
-    "typescript": "^4.6.2",
+    "typescript": "^5.3.3",
     "walk-sync": "^2.0.2"
-  },
-  "dependencies": {
-    "postcss": "^8.4.35"
   }
 }
