--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,7 +25,7 @@
     "compile": "tsc",
     "build": "tsc --noEmitOnError",
     "prepare": "npm run build",
-    "test": "jest --colors --ci"
+    "test": "jest --colors"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
