Adapt cli/index to TypeScript

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
   "compilerOptions": {
     "outDir": "./dist",
-    "allowJs": true
+    "allowJs": true,
+    "resolveJsonModule": true
   }
 }
