--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/MarkBind/markbind.git"
   },
   "scripts": {
-    "test": "jest --colors && cd test/functional && node test.js",
+    "test": "npm run build && jest --colors && cd test/functional && node test.js",
     "updatetest": "cd test/functional && node updatetest.js",
     "build": "tsc"
   },
