--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ packages/core/src/lib/progress/*.js
 
 # --- packages/cli ---
 packages/cli/index.js
+packages/cli/src/cmd/build.js
 # --- packages/cli end ---
 
 # Nx for Lerna
