--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/url-parse": "^1.4.8",
+    "@types/lodash": "^4.14.181",
     "diff": "^4.0.1",
     "ignore": "^5.1.4",
     "istextorbinary": "^3.3.0",
