--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig_base.json",
-  "exclude": ["node_modules", "**/*.test.ts", "dist"],
+  "exclude": ["node_modules", "**/*.test.ts", "dist", "**/*.test.js"],
   "compilerOptions": {
     "outDir": "./dist",
     "allowJs": true,
