Move resolveJson to base config

--- a/tsconfig_base.json
+++ b/tsconfig_base.json
@@ -10,6 +10,7 @@
     "declarationMap": true,
     "forceConsistentCasingInFileNames": true,
     "newLine": "lf",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   }
 }
