Update build:backend to use lerna
build:backend uses `tsc --noEmitOnError` to build the project.

This causes built files to be placed directly next to .ts files in
all projects, as tsc uses the tsconfig in the root of the project.
(refer to
https://stackoverflow.com/questions/64626846/typescript-tsc-not-picking-up-tsconfig-json-inside-a-subdirectory)

We can update tsconfigs with project references to achieve this
functionality, but let's leverage lerna for simplicity instead.

This way, we use the sub-modules' already-defined `build` scripts
to build the projects in a consistent way.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "prebuild:backend": "npm run clean",
-    "build:backend": "tsc --noEmitOnError",
+    "build:backend": "lerna run build --stream --scope=markbind-cli --scope=@markbind/core",
     "build:web": "cd packages/core-web && npm run build",
     "build:dg": "cd docs && ../packages/cli/index.js build -s dg-site.json",
     "build:ug": "cd docs && ../packages/cli/index.js build -s ug-site.json",
