Update root package.json to ref built TS files
Scripts in root package.json refer to index.js in cli/ package.

As part of TS migration, update scripts to refer to
the index.js that is created after building the project.

Add pre- scripts that build the project to ensure that
the latest index.js file is used whenever
a script is run. Extract cli path to a variable.

--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "workspaces": [
     "packages/*"
   ],
+  "config": {
+    "built_cli_index_path": "../packages/cli/dist/cli/index.js"
+  },
   "scripts": {
+    "build:web": "cd packages/core-web && npm run build",
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --build",
-    "build:web": "cd packages/core-web && npm run build",
-    "build:dg": "cd docs && ../packages/cli/index.js build -s dg-site.json",
-    "build:ug": "cd docs && ../packages/cli/index.js build -s ug-site.json",
-    "build:docs": "cd docs && node ../packages/cli/index.js build --baseUrl",
-    "deploy:dg": "cd docs && ../packages/cli/index.js deploy -s dg-site.json --ci",
-    "deploy:ug": "cd docs && ../packages/cli/index.js deploy -s ug-site.json --ci",
-    "deploy:netlify": "npm run setup && npm run build:web && cd docs && node ../packages/cli/index.js build --baseUrl",
+
+    "prebuild:dg": "npm run build:backend",
+    "prebuild:ug": "npm run build:backend",
+    "prebuild:docs": "npm run build:backend",
+    "predeploy:dg": "npm run build:backend",
+    "predeploy:ug": "npm run build:backend",
+    "predeploy:netlify": "npm run build:backend",
+
+    "build:dg": "cd docs && node $npm_package_config_built_cli_index_path build -s dg-site.json",
+    "build:ug": "cd docs && node $npm_package_config_built_cli_index_path build -s ug-site.json",
+    "build:docs": "cd docs && node $npm_package_config_built_cli_index_path build --baseUrl",
+    "deploy:dg": "cd docs && node $npm_package_config_built_cli_index_path deploy -s dg-site.json --ci",
+    "deploy:ug": "cd docs && node $npm_package_config_built_cli_index_path deploy -s ug-site.json --ci",
+    "deploy:netlify": "npm run setup && npm run build:web && cd docs && node $npm_package_config_built_cli_index_path build --baseUrl",
+
     "clean": "node ./scripts/clean.js",
     "csslint": "stylelint **/*.css **/*.vue",
     "csslintfix": "stylelint **/*.css **/*.vue --fix",
