--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,10 +12,12 @@
   ],
   "homepage": "https://markbind.org",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
-    "markbind": "./dist/cli/index.js"
+    "markbind": "./dist/index.js"
   },
+  "files": ["dist/", "README.md"],
   "repository": {
     "type": "git",
     "url": "https://github.com/MarkBind/markbind.git"
@@ -45,8 +47,8 @@
     "winston-daily-rotate-file": "^3.10.0"
   },
   "devDependencies": {
-    "@types/url-parse": "^1.4.8",
     "@types/lodash": "^4.14.181",
+    "@types/url-parse": "^1.4.8",
     "diff": "^4.0.1",
     "ignore": "^5.1.4",
     "istextorbinary": "^3.3.0",
