Adapt vue-components TypeScript files
- Add TypeScript type annotations to all migrated files:
  * Wrap Vue Options API components with defineComponent for proper type
inference
  * Convert directives (Closeable, Float) to ES6 exports with proper
types
  * Add comprehensive type safety to utilities (utils, urls, pubsub,
dropdown, submenu)
  * Fix NodeList.ts with proper type handling and linting compliance
  * Add 'this: any' parameters to QuizQuestionMixin for dynamic property
access

- Configure build tools for TypeScript:
  * Install and configure @babel/preset-typescript
  * Update babel.config.js with TypeScript preset
  * Configure Jest with ts-jest for test transformation

- Configure ESLint for TypeScript + Vue:
  * Add packages/vue-components/tsconfig.lint.json for ESLint
  * Update root .eslintrc.js to include vue-components tsconfig in
project array
  * Configure vue-components/.eslintrc.js with vue-eslint-parser and
TypeScript support
  * Add .eslintignore to exclude coverage and config files from linting
  * Configure import resolver to handle .ts file resolution
  * Add overrides for .js files to not require TypeScript project

- Fix all linting errors without disabling rules:
  * Fix 83 linting errors in NodeList.ts (bitwise operators, parameter
reassignments, for-in loops)
  * Fix 32 linting errors in utils.ts (nested ternaries, line length,
typeof checks)
  * Reorder function declarations to fix no-use-before-define errors
  * Add inline eslint-disable only for unavoidable legacy patterns
(lodash checks where lodash isn't available)
  * Replace ~arr.indexOf(x) with arr.indexOf(x) !== -1
  * Replace for-in loops with Object.keys().forEach()
  * Fix parameter reassignments by using local variables
  * Break up nested ternaries into if-else statements
  * Use Number.isNaN instead of isNaN

- Configure Vue-specific TypeScript settings:
  * Set strict: false for incremental migration
  * Disable noImplicitAny and noImplicitThis for Vue Options API
compat

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "updatetest": "lerna run updatetest --stream"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.28.5",
     "@stylistic/stylelint-plugin": "^2.1.0",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
