--- a/packages/vue-components/tsconfig.json
+++ b/packages/vue-components/tsconfig.json
@@ -5,7 +5,13 @@
     "moduleResolution": "node",
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
-    "noEmit": true
+    "noEmit": true,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "strictPropertyInitialization": false,
+    "strict": false
   },
   "include": [
     "src/**/*.ts",
