--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -40,6 +40,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "portal-vue": "^3.0.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.9.3",
     "vue": "3.3.11",
     "vue-final-modal": "^4.5.5",
