--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "deploy:dg": "cd docs && node ../packages/cli/dist/index.js deploy -s dg-site.json --ci",
     "deploy:ug": "cd docs && node ../packages/cli/dist/index.js deploy -s ug-site.json --ci",
     "deploy:netlify": "npm run setup && npm run build:backend && npm run build:web && cd docs && node ../packages/cli/dist/index.js build --baseUrl",
-    "clean": "node ./scripts/clean.js",
+    "clean": "tsc --build --clean && node ./scripts/clean.js",
     "csslint": "stylelint **/*.css **/*.vue",
     "csslintfix": "stylelint **/*.css **/*.vue --fix",
     "dev": "tsc --build --watch",
