Add paths of .js files to gitignore & eslintignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -17,6 +17,7 @@ packages/core/src/Layout/*.js
 packages/core/src/lib/nunjucks-extensions/*.js
 packages/core/src/lib/markdown-it/index.js
 packages/core/src/lib/markdown-it/highlight/*.js
+packages/core/src/lib/markdown-it/plugins/**/*.js
 packages/core/src/lib/markdown-it/utils/*.js
 packages/core/src/Page/*.js
 packages/core/src/plugins/**/*.js
