Add AI-tool-specific exclusions to .gitignore
To support workflow for setting up skills locally,
a symlink is suggested to be created in the
root directory. These files should not be
committed.

Add common directories for skills configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,8 @@ packages/core/src/lib/progress/*.js
 # Nx for Lerna
 .nx/cache
 .nx/workspace-data
+
+# AI tool-specific configuration
+.opencode
+.claude
+.cline
