--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -44,5 +44,8 @@
     "vue-final-modal": "^4.5.5",
     "vue-style-loader": "^4.1.3"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "html-entities": "^2.6.0"
+  }
 }
