--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/MarkBind/markbind.git"
   },
   "scripts": {
-    "test": "jest --colors && cd test/functional && node test.js",
+    "test": "jest --colors && cd test/functional && node ../../dist/test/functional/test.js",
     "updatetest": "cd test/functional && node updatetest.js",
     "build": "tsc",
     "dev": "tsc --watch"
