--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,12 @@ packages/core/index.js
 packages/core/src/lib/progress/*.js
 # --- packages/core end ---
 
+# Manual type definitions need to be included
+!packages/cli/src/lib/live-server/index.d.ts
+
 # Nx for Lerna
 .nx/cache
 .nx/workspace-data
+
+# Build folder
+dist/
