--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,6 +42,7 @@
     "winston-daily-rotate-file": "^3.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.181",
     "@types/url-parse": "^1.4.8",
     "diff": "^8.0.3",
     "ignore": "^5.1.4",
