--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.3.3",
-    "walk-sync": "^2.0.2"
+    "walk-sync": "^2.0.2",
+    "tsx": "^4.21.0"
   }
 }
