--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,17 +12,24 @@
   ],
   "homepage": "https://markbind.org",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
-    "markbind": "./index.js"
+    "markbind": "./dist/index.js"
   },
+  "files": [
+    "dist/",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/MarkBind/markbind.git"
   },
   "scripts": {
-    "test": "jest --colors && cd test/functional && node test.js",
-    "updatetest": "cd test/functional && node updatetest.js"
+    "test": "jest --colors && cd test/functional && node ../../dist/test/functional/test.js",
+    "updatetest": "cd test/functional && node updatetest.js",
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "dependencies": {
     "@markbind/core": "6.2.0",
@@ -42,6 +49,7 @@
     "winston-daily-rotate-file": "^3.10.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.6",
     "@types/lodash": "^4.14.181",
     "@types/url-parse": "^1.4.8",
     "diff": "^8.0.3",
@@ -49,6 +57,7 @@
     "istextorbinary": "^9.5.0",
     "jest": "^29.7.0",
     "memfs": "^4.56.2",
+    "ts-jest": "^29.4.6",
     "walk-sync": "^2.0.2"
   }
 }
