Add workaround script for file permission issue
TypeScript compiler outputs all generated files
with `644` permissions, meaning that by default
generated files are not executable. Additionally,
the compiler does not preserve permissions of
source files when generating output, see:
github.com/microsoft/TypeScript/issues/37583

This particularly causes a problem with
`npm link`, since the entrypoint file
does not have execute permissions after
rebuilding, making the linked project
unable to be ran.

To workaround this, let's
* Add a script to ensure that the entrypoint
file is executable
* Make the script run before `dev` and
`build:backend` workflows
* Add a disclaimer in documentation
on what to do if the permission
error occurs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build:web": "cd packages/core-web && npm run build",
     "prebuild:backend": "npm run clean",
-    "build:backend": "tsc --build",
+    "build:backend": "node ./scripts/prepCliOutput.js && tsc --build",
     "build:dg": "cd docs && node ../packages/cli/dist/index.js build -s dg-site.json",
     "build:ug": "cd docs && node ../packages/cli/dist/index.js build -s ug-site.json",
     "build:docs": "cd docs && node ../packages/cli/dist/index.js build --baseUrl",
@@ -17,7 +17,7 @@
     "clean": "tsc --build --clean && node ./scripts/clean.js",
     "csslint": "stylelint **/*.css **/*.vue",
     "csslintfix": "stylelint **/*.css **/*.vue --fix",
-    "dev": "tsc --build --watch",
+    "dev": "node ./scripts/prepCliOutput.js && tsc --build --watch",
     "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
     "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
     "setup": "npm ci && npm run build:backend",
