Add vue to peer dependency

--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -47,5 +47,8 @@
   "private": true,
   "dependencies": {
     "html-entities": "^2.6.0"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.0"
   }
 }
