--- a/.eslintignore
+++ b/.eslintignore
@@ -52,6 +52,7 @@ packages/vue-components/src/utils/NodeList.js
 packages/vue-components/src/utils/utils.js
 packages/vue-components/src/utils/pubsub.js
 packages/vue-components/src/utils/urls.js
+packages/vue-components/src/utils/dropdown.js
 
 # --- packages/vue-components end ---
 
