--- a/.eslintignore
+++ b/.eslintignore
@@ -54,6 +54,7 @@ packages/vue-components/src/utils/pubsub.js
 packages/vue-components/src/utils/urls.js
 packages/vue-components/src/utils/dropdown.js
 packages/vue-components/src/utils/submenu.js
+packages/vue-components/src/utils/colors.js
 
 # --- packages/vue-components end ---
 
