--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ packages/vue-components/src/utils/pubsub.js
 packages/vue-components/src/utils/urls.js
 packages/vue-components/src/utils/dropdown.js
 packages/vue-components/src/utils/submenu.js
+packages/vue-components/src/utils/colors.js
 # --- packages/vue-components end ---
 
 # Manual type definitions need to be included
