Add tsconfig.json and typecheck script for vue-components
Add a tsconfig.json that extends the shared tsconfig_base.json to enable
type-checking for the migrated .ts files in vue-components.

Key decisions:
- noEmit: true — Babel handles transpilation via webpack and jest, so
  tsc is used only for type-checking, not compilation. This avoids
  duplicating build output and keeps the existing Babel pipeline intact.
- allowJs: true — The package still has .js files (e.g. src/index.js,
  .vue script blocks) that .ts files import from. Without this, tsc
  would fail to resolve those imports.
- checkJs: false — Only type-check .ts files. The remaining .js files
  are not yet migrated and would produce many errors under strict mode.
- Not added to root tsconfig.json references — The root references
  drive `tsc --build` for packages that emit compiled .js files (core,
  cli). Since vue-components uses noEmit, adding it there would be
  misleading and would require composite: true which conflicts with
  noEmit.

--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "test": "jest --clearCache && jest --colors",
-    "updatetest": "jest --updateSnapshot"
+    "updatetest": "jest --updateSnapshot",
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
