--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "updatetest": "lerna run updatetest --stream"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.28.5",
     "@stylistic/stylelint-plugin": "^2.1.0",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -40,8 +41,8 @@
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3",
-    "walk-sync": "^2.0.2",
-    "tsx": "^4.21.0"
+    "walk-sync": "^2.0.2"
   }
 }
