Update eslint rules for cli package
Project uses airbnb rules throughout the
codebase.Airbnb uses import/extensions
rule to ensure that imports don't have
extensions.

This conflicts with ESM requirement of including
extensions when using relative imports.

Override rule such that errors are not shown
when including import extensions.

--- a/.eslintignore
+++ b/.eslintignore
@@ -40,6 +40,7 @@ packages/core/src/lib/markdown-it/plugins/*
 
 # --- packages/cli ---
 packages/cli/dist/**/*.js
+packages/cli/test/functional/**/*.js
 # --- packages/cli end ---
 
 !.eslintrc.js
