--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -58,7 +58,10 @@
     "istextorbinary": "^9.5.0",
     "jest": "^29.7.0",
     "memfs": "^4.56.2",
-    "ts-jest": "^29.4.6",
-    "walk-sync": "^2.0.2"
+    "walk-sync": "^2.0.2",
+    "@babel/core": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-typescript": "^7.28.5",
+    "babel-jest": "^29.7.0"
   }
 }
