--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,7 +57,6 @@
     "istextorbinary": "^9.5.0",
     "jest": "^29.7.0",
     "memfs": "^4.56.2",
-    "ts-jest": "^29.4.6",
-    "walk-sync": "^2.0.2"
+    "ts-jest": "^29.4.6"
   }
 }
