--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.3.3",
-    "walk-sync": "^2.0.2"
+    "typescript": "^5.3.3"
   }
 }
